prepare for jdk11