@@ -43,8 +43,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<junit.version>5.8.2</junit.version>
 		<kafka.version>2.8.1</kafka.version>
 		<commons.lang3.version>3.12.0</commons.lang3.version>
@@ -58,6 +58,7 @@
 		<slf4j.version>1.7.32</slf4j.version>
 		<lz4.version>1.6.0</lz4.version>
 		<kafka.connect.maven.plugin.version>0.12.0</kafka.connect.maven.plugin.version>
+		<surefire.plugin.version>2.22.2</surefire.plugin.version>
 	</properties>
 
 	<dependencies>
@@ -207,6 +208,24 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${surefire.plugin.version}</version>
+				<configuration>
+					<argLine>
+						--add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+						--add-exports java.base/sun.nio.ch=ALL-UNNAMED
+						--add-exports jdk.unsupported/sun.misc=ALL-UNNAMED
+						--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+						--add-opens jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+						--add-opens java.base/java.io=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+					</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>io.confluent</groupId>
